# Pipeline-Runner

./: .gitignore  Architecture.md  Build_steps.md  CMakeLists.txt  Runbook.md  main.cpp  notes.txt
config/: ConfigParser.cpp  ConfigParser.h
core/: IDataSource.h  IOutputSink.h  ITransformation.h  ThreadSafeQueue.h
input/: sample_data.txt
modules/: FFT.cpp  FFT.h  FFTMain.cpp  FileSink.cpp  FileSink.h  FileSinkMain.cpp  FileSource.cpp  FileSource.h  FileSourceMain.cpp  SineGenerator.cpp  SineGenerator.h  SineGeneratorMain.cpp
output/: results.txt
packaging/: pipeline_deb.deb
packaging/pipeline_deb/DEBIAN/: control
packaging/pipeline_deb/usr/local/share/pipeline_project/config/: config.json
pipeline/: PipelineRunner.cpp  PipelineRunner.h  PipelineRunnerProcess.cpp
tests/: test_fft.cpp  test_filesource.cpp  test_input.txt
